--- a/src/app/components/habits/habits.component.html
+++ b/src/app/components/habits/habits.component.html
@@ -1,3 +1,13 @@
+<div class="max-w-2xl mx-auto bg-white p-6 rounded-xl shadow-lg mb-6">
+  <h2 class="text-2xl font-bold mb-4 text-emerald-600">Add New Habit</h2>
+  <form (ngSubmit)="addHabit()" class="space-y-4">
+    <input type="text" [(ngModel)]="newHabit.name" name="name" placeholder="Habit Name" class="w-full p-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-500" required>
+    <input type="text" [(ngModel)]="newHabit.description" name="description" placeholder="Description"
+    class="w-full p-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-500" required>
+    <button type="submit" class="bg-emerald-500 hover:bg-emerald-600 text-white px-4 py-2 rounded-md cursor-pointer">Add Habit</button>
+  </form>
+</div>
+
 <div class="min-h-screen bg-gray-100 p-4">
   <div class="max-w-2xl mx-auto">
     <h1 class="text-3xl font-bold mb-6 text-center text-emerald-600">My Daily Habit</h1>
