added toggle method to status changes for task compolkete or not, im not fully completed now,only this is testing, i'll complete soon this method

--- a/src/app/components/habits/habits.component.html
+++ b/src/app/components/habits/habits.component.html
@@ -16,9 +16,10 @@
         <h2 class="text-xl-center font-semibold text-gray-800">{{habit.name}}</h2>
         <p class="text-sm text-gray-600">{{habit.description}}</p>
       </div>
+      <!-- Toggle -->
       <div>
-        <span [ngClass]="habit.completed ? 'bg-emerald-500' : 'bg-red-400'"
-        class="text-white font-medium px-3 py-1 rounded-full cursor-pointer">{{habit.completed ? 'Completed' : 'Pending'}}</span>
+        <span (click)="toggleHabit(habit)" [ngClass]="habit.completed ? 'bg-emerald-500' : 'bg-red-400'"
+        class="text-white text-xs font-medium px-3 py-1 rounded-full cursor-pointer">{{ habit.completed ? 'Completed' : 'Pending' }}</span>
       </div>
     </div>
   </div>
