--- a/src/app/components/habits/habits.component.html
+++ b/src/app/components/habits/habits.component.html
@@ -20,6 +20,7 @@
       <div>
         <span (click)="toggleHabit(habit)" [ngClass]="habit.completed ? 'bg-emerald-500' : 'bg-red-400'"
         class="text-white text-xs font-medium px-3 py-1 rounded-full cursor-pointer">{{ habit.completed ? 'Completed' : 'Pending' }}</span>
+        <button (click)="deleteHabit(habit.id)" class="text-white ml-2 bg-yellow-500  font-medium px-3 py-1 rounded-full cursor-pointer">Delete</button>
       </div>
     </div>
   </div>
